# alfrd

./: .env.example  .gitignore  ARCHITECTURE.md  AUTO_FILE_IMPLEMENTATION.md  DOCUMENTATION_UPDATE_SUMMARY.md  DOCUMENT_PROCESSING_DESIGN.md  HARDCODED_PROMPTS_TODO.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  SERIES_BASED_FILING_DESIGN.md  START_HERE.md  STATUS.md  TAGS_REFACTOR_SUMMARY.md  WORKFLOW_REFACTORING_PLAN.md  pyproject.toml  requirements.txt  test-files-workflow.sh
api-server/: pyproject.toml
api-server/src/api_server/: auth.py  chat_service.py  main.py
api-server/src/api_server/db/: add_prompt_behavior_columns.sql  add_recovery_columns.sql  schema.sql
api-server/src/api_server/db/migrations/: 001_add_files_tables.sql
api-server/tests/: README.md  SYSTEMS_TEST_DESIGN.md  conftest.py  test_api.py  test_api_readonly.py
docker/: Dockerfile  docker-compose.yml  start.sh  supervisord.conf
docs/: FILES_FEATURE_DESIGN.md  FILES_FEATURE_PROGRESS.md  FILES_TAG_ONLY_REFACTOR.md  FILES_UI_DESIGN.md  JSON_FLATTENING.md  POSTGRES_MIGRATION.md  PREFECT_REMOVAL_MIGRATION.md  PROMPT_ARCHITECTURE_REDESIGN.md  SCHEMA_EVOLUTION_ANALYSIS.md  SERIES_PROMPT_BUG_ANALYSIS.md  SERIES_PROMPT_EVOLUTION_DESIGN.md  SERIES_PROMPT_IMPLEMENTATION_PLAN.md
document-processor/: pyproject.toml
document-processor/src/document_processor/: classifier_worker.py  detector.py  events.py  file_generator_worker.py  filing_worker.py  main.py  main_old_backup.py  ocr_worker.py  orchestrator.py  scorer_workers.py  storage.py  summarizer_worker.py  watcher.py  workers.py  workflow_worker.py
document-processor/src/document_processor/cli/: add-document.py  get-aws-bill.py  get-document.py  get-files.py  get-series.py  get-tags.py  init-db.py  test-aws-cache.py  view-document.py  view-events.py  view-prompts.py
document-processor/src/document_processor/extractors/: __init__.py  aws_textract.py  image_ocr.py  pdf.py  tesseract_ocr.py  text.py
document-processor/src/document_processor/flows/: __init__.py  document_flow.py  file_flow.py  orchestrator.py
document-processor/src/document_processor/tasks/: __init__.py  document_tasks.py  series_regeneration.py
document-processor/src/document_processor/utils/: __init__.py  locks.py
document-processor/tests/: README.md  test_locks.py  test_ocr_worker.py  test_pipeline_integration.py  test_storage.py  test_workers.py
mcp-server/: pyproject.toml  test_classifier.py
mcp-server/src/mcp_server/: main.py
mcp-server/src/mcp_server/llm/: __init__.py  bedrock.py  client.py
mcp-server/src/mcp_server/tools/: __init__.py  classify_document.py  classify_dynamic.py  detect_series.py  score_performance.py  summarize_bill.py  summarize_dynamic.py  summarize_file.py  summarize_series.py
prompts/: README.md  classifier.yaml  document_types.yaml
prompts/summarizers/: bank_statement.yaml  credit_card.yaml  education.yaml  employment.yaml  event.yaml  government.yaml  insurance.yaml  investment.yaml  junk.yaml  legal.yaml  medical.yaml  other.yaml  payroll.yaml  promotional.yaml  property.yaml  service_bill.yaml  tax.yaml  utility_bill.yaml  vehicle.yaml
samples/: README.md  test-pipeline.sh  test_ocr.py
scripts/: README.md  add-all-generated-dataset  add-document  alfrd  alfrd-chat  alfrd-mcp  analyze-file-data  analyze-logs  check-files  clear-aws-cache  create-alfrd-db  dev-status.sh  get-aws-bill  get-document  get-files  get-series  get-tags  init-db  init-db.py  load-prompts-to-db  process-documents.sh  reset-db  restart-all  run-tests  start-all  start-api  start-api.sh  start-dev.sh  start-mcp.sh  start-processor  start-processor.sh  start-webui  start-webui.sh  stop-all  stop-dev.sh  test-api  test-aws-cache  test-file-generation  test-worker-pipeline.sh  update-prompt-behavior  (+3 more)
shared/: __init__.py  api_wrapper.py  aws_clients.py  config.py  constants.py  database.py  event_logger.py  json_flattener.py  llm_client.py  logging_config.py  types.py
shared/tests/: test_database.py  test_json_flattener.py
test-dataset-generator/: README.md  generator.py  requirements.txt
test-dataset-generator/personas/: alex_johnson.yaml
test-dataset-generator/templates/bills/: pge_utility.html
test-dataset-generator/templates/property/: rent_receipt.html
test-dataset-generator/templates/school/: tuition_bill.html
test-dataset-generator/templates/vehicle/: insurance_bill.html
web-ui/: README.md  index.html  package-lock.json  package.json  vite.config.js
web-ui/public/: manifest.json
web-ui/src/: App.jsx  main.jsx
web-ui/src/components/: DataTable.jsx  TabBar.jsx
web-ui/src/context/: AuthContext.jsx
web-ui/src/pages/: CapturePage.jsx  ChatPage.jsx  CreateFilePage.jsx  DocumentDetailPage.jsx  DocumentsPage.jsx  EventsPage.jsx  FileDetailPage.jsx  FilesPage.jsx  LoginPage.jsx  PromptsPage.jsx  SearchPage.jsx  SeriesDetailPage.jsx  SeriesPage.jsx
web-ui/src/theme/: variables.css
