[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP server for esec AI integration"
requires-python = ">=3.11"
dependencies = [
    "mcp>=0.9.0",
    "anthropic>=0.18.0",
    "openai>=1.10.0",
    "pydantic>=2.5.0",
    "jinja2>=3.1.3",
    "duckdb>=0.10.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mcp_server = ["py.typed", "prompts/*.j2"]